--- a/acfun.scss
+++ b/acfun.scss
@@ -1,7 +1,6 @@
 * {
     margin: 0;
     padding: 0;
-    // border: 1px solid;
 }
 
 $theme-red: rgb(248, 73, 98);
@@ -64,20 +63,245 @@ button {
 
 .center {
     width: 980px;
-    margin: 0 auto;
+    margin: 40px auto 0 auto;
 }
 
-// .column-left {
-//     position: relative;
-//     margin-top: 20px;
-//     width: 700px;
-// }
-// .column-right {
-//     float: right;
-//     // position: absolute;
-//     margin-left: 20px;
-//     width: 260px;
-// }
+.column-left {
+    float: left;
+    width: 700px;
+    h2 {
+        position: relative;
+        margin-bottom: 10px;
+        img {
+            vertical-align: middle;
+            width: 40px;
+        }
+        a {
+            margin-left: 10px;
+        }
+        a:hover {
+            color: $theme-red;
+        }
+        button {
+            padding: 2px 6px;
+            border: 1px solid $theme-grey2;
+            border-radius: 4px;
+            margin-left: 10px;
+            background-color: #fff;
+            vertical-align: middle;
+        }
+        button:hover {
+            background-color: $theme-grey;
+        }
+        .title-right {
+            position: absolute;
+            right: 0;
+            top: 0;
+            font-size: 12px;
+            margin-top: 10px;
+            a {
+                cursor: pointer;
+                margin-right: 10px;
+            }
+            a:hover {
+                color: $theme-red;
+            }
+            .more {
+                color: $theme-red;
+            }
+        }
+    }
+    .video-list {
+        margin-left: -20px;
+        margin-top: -20px;
+        li {
+            float: left;
+            margin-left: 20px;
+            margin-top: 20px;
+            width: 160px;
+            img {
+                vertical-align: top;
+                width: 160px;
+                height: 90px;
+                cursor: pointer;
+            }
+            h4 {
+                position: relative;
+                overflow: hidden;
+                cursor: pointer;
+                margin-top: 5px;
+                i {
+                    font-size: 12px;
+                }
+                b {
+                    font-size: 12px;
+                    margin-left: 40px;
+                }
+            }
+            p {
+                width: 160px;
+                margin-top: 5px;
+                position: absolute;
+                background-color: #fff;
+                bottom: 0;
+                color: $theme-grey2;
+                transition: all .5s;
+            }
+            h4:hover {
+                color: $theme-red;
+                p {
+                    bottom: -20px;
+                }
+            }
+        }
+        .first-video {
+            width: 340px;
+            height: 270px;
+            img {
+                width: 340px;
+                height: 240px;
+                vertical-align: top;
+            }
+            p {
+                position: static;
+                width: 340px;
+                margin-top: 0;
+            }
+        }
+    }
+}
+
+.column-right {
+    float: right;
+    width: 260px;
+    margin-left: 20px;
+    .rank {
+        position: relative;
+        .rank-type {
+            position: relative;
+            h2 {
+                a:hover {
+                    color: $theme-red;
+                }
+            }
+            ul {
+                position: absolute;
+                top: 3px;
+                right: 0;
+                li {
+                    float: left;
+                    padding: 2px 10px;
+                    cursor: pointer;
+                }
+                .active {
+                    color: $theme-red;
+                    background-color: rgb(248, 231, 232);
+                }
+            }
+        }
+        .active {
+            display: block;
+        }
+    }
+}
+
+.rank-list {
+    display: none;
+    margin-top: 25px;
+    height: 423px;
+    li+li {
+        margin-top: 14px;
+    }
+    p {
+        height: 15px;
+        overflow: hidden;
+        span {
+            color: $theme-grey2;
+            margin-left: 5px;
+            margin-right: 10px;
+        }
+    }
+    a:hover {
+        color: $theme-red;
+    }
+    img {
+        float: left;
+        width: 90px;
+        height: 50px;
+    }
+    div {
+        float: right;
+        width: 154px;
+        h5 {
+            height: 20px;
+            overflow: hidden;
+        }
+        p {
+            color: $theme-grey2;
+        }
+        i {
+            float: left;
+            color: $theme-grey2;
+            font-size: 12px;
+        }
+        b {
+            float: right;
+            color: $theme-grey2;
+            font-size: 12px;
+        }
+    }
+}
+
+.lower-height {
+    height: 290px;
+}
+
+.img-recommend {
+    position: relative;
+    span {
+        position: absolute;
+        width: 36px;
+        height: 18px;
+        line-height: 18px;
+        text-align: center;
+        top: 72px;
+        left: 0;
+        color: #fff;
+        background-color: $theme-red;
+    }
+}
+
+.img-li {
+    position: relative;
+    span {
+        position: absolute;
+        width: 16px;
+        height: 16px;
+        line-height: 16px;
+        text-align: center;
+        top: 0;
+        left: 0;
+        color: #fff;
+        background-color: $theme-red;
+    }
+}
+
+.view-more {
+    position: absolute;
+    bottom: 0;
+    display: inline-block;
+    height: 28px;
+    width: 260px;
+    line-height: 28px;
+    text-align: center;
+    border-radius: 4px;
+    background-color: rgb(228, 228, 228);
+}
+
+.view-more:hover {
+    background-color: rgb(191, 190, 188);
+}
+
 header {
     .wrap {
         position: fixed;
@@ -587,359 +811,20 @@ header {
     }
 }
 
-.entertainment {
-    // .column-left {
-    //     float: left;
-    //     width: 700px;
-    //     margin-top: 40px;
-    //     h2 {
-    //         img {
-    //             vertical-align: middle;
-    //             width: 40px;
-    //         }
-    //         span {
-    //             margin-left: 10px;
-    //         }
-    //         button {
-    //             padding: 2px 6px;
-    //             border: 1px solid $theme-grey2;
-    //             border-radius: 4px;
-    //             margin-left: 10px;
-    //             background-color: #fff;
-    //             vertical-align: middle;
-    //         }
-    //         button:hover {
-    //             background-color: $theme-grey;
-    //         }
-    //         .title-right {
-    //             font-size: 12px;
-    //             float: right;
-    //             margin-top: 10px;
-    //             a {
-    //                 cursor: pointer;
-    //                 margin-right: 10px;
-    //             }
-    //             a:hover {
-    //                 color: $theme-red;
-    //             }
-    //             .more {
-    //                 color: $theme-red;
-    //             }
-    //         }
-    //     }
-    //     .video-list {
-    //         margin-left: -20px;
-    //         margin-top: -20px;
-    //         li {
-    //             float: left;
-    //             margin-left: 20px;
-    //             margin-top: 20px;
-    //             width: 160px;
-    //             img {
-    //                 vertical-align: top;
-    //                 width: 160px;
-    //                 height: 90px;
-    //                 cursor: pointer;
-    //             }
-    //             h4 {
-    //                 position: relative;
-    //                 overflow: hidden;
-    //                 cursor: pointer;
-    //                 margin-top: 5px;
-    //                 i {
-    //                     font-size: 12px;
-    //                 }
-    //                 b {
-    //                     font-size: 12px;
-    //                     margin-left: 40px;
-    //                 }
-    //             }
-    //             p {
-    //                 width: 160px;
-    //                 margin-top: 5px;
-    //                 position: absolute;
-    //                 background-color: #fff;
-    //                 bottom: 0;
-    //                 color: $theme-grey2;
-    //                 transition: all .5s;
-    //             }
-    //             h4:hover {
-    //                 color: $theme-red;
-    //                 p {
-    //                     bottom: -20px;
-    //                 }
-    //             }
-    //         }
-    //         .first-video {
-    //             width: 340px;
-    //             img {
-    //                 width: 340px;
-    //                 height: 240px;
-    //                 vertical-align: top;
-    //             }
-    //             p {
-    //                 position: static;
-    //                 margin-top: 2px;
-    //             }
-    //         }
-    //     }
-    // }
-    // .column-right {
-    //     float: right;
-    //     width: 260px;
-    //     margin-top: 50px;
-    //     margin-left: 20px;
-    //     .entertainment-rank {
-    //         position: relative;
-    //         .rank-type {
-    //             position: relative;
-    //             ul {
-    //                 position: absolute;
-    //                 top: 3px;
-    //                 right: 0;
-    //                 li {
-    //                     float: left;
-    //                     padding: 2px 10px;
-    //                     cursor: pointer;
-    //                 }
-    //                 .active {
-    //                     color: $theme-red;
-    //                     background-color: rgb(248, 231, 232);
-    //                 }
-    //             }
-    //         }
-    //         .active {
-    //             display: block;
-    //         }
-    //     }
-    // }
-}
-
-.column-left {
-    float: left;
-    width: 700px;
+.ads {
     margin-top: 40px;
-    h2 {
-        img {
-            vertical-align: middle;
-            width: 40px;
-        }
-        a {
-            margin-left: 10px;
-        }
-        a:hover {
-            color: $theme-red;
-        }
-        button {
-            padding: 2px 6px;
-            border: 1px solid $theme-grey2;
-            border-radius: 4px;
-            margin-left: 10px;
-            background-color: #fff;
-            vertical-align: middle;
-        }
-        button:hover {
-            background-color: $theme-grey;
-        }
-        .title-right {
-            font-size: 12px;
-            float: right;
-            margin-top: 10px;
-            a {
-                cursor: pointer;
-                margin-right: 10px;
-            }
-            a:hover {
-                color: $theme-red;
-            }
-            .more {
-                color: $theme-red;
-            }
-        }
-    }
-    .video-list {
-        margin-left: -20px;
-        margin-top: -20px;
-        li {
-            float: left;
-            margin-left: 20px;
-            margin-top: 20px;
-            width: 160px;
-            img {
-                vertical-align: top;
-                width: 160px;
-                height: 90px;
-                cursor: pointer;
-            }
-            h4 {
-                position: relative;
-                overflow: hidden;
-                cursor: pointer;
-                margin-top: 5px;
-                i {
-                    font-size: 12px;
-                }
-                b {
-                    font-size: 12px;
-                    margin-left: 40px;
-                }
-            }
-            p {
-                width: 160px;
-                margin-top: 5px;
-                position: absolute;
-                background-color: #fff;
-                bottom: 0;
-                color: $theme-grey2;
-                transition: all .5s;
-            }
-            h4:hover {
-                color: $theme-red;
-                p {
-                    bottom: -20px;
-                }
-            }
-        }
-        .first-video {
-            width: 340px;
-            img {
-                width: 340px;
-                height: 240px;
-                vertical-align: top;
-            }
-            p {
-                position: static;
-                width: 340px;
-                margin-top: 2px;
-            }
-        }
-    }
 }
 
-.column-right {
-    float: right;
-    width: 260px;
-    margin-top: 50px;
-    margin-left: 20px;
-    .rank {
-        position: relative;
-        .rank-type {
-            position: relative;
-            h2 {
-                a:hover {
-                    color: $theme-red;
-                }
-            }
-            ul {
-                position: absolute;
-                top: 3px;
-                right: 0;
-                li {
-                    float: left;
-                    padding: 2px 10px;
-                    cursor: pointer;
-                }
-                .active {
-                    color: $theme-red;
-                    background-color: rgb(248, 231, 232);
-                }
-            }
-        }
-        .active {
-            display: block;
-        }
-    }
-}
-
-.rank-list {
-    display: none;
-    margin-top: 12px;
-    height: 423px;
-    li+li {
-        margin-top: 15px;
-    }
-    p {
-        height: 14px;
-        overflow: hidden;
-        span {
-            color: $theme-grey2;
-            margin-left: 5px;
-            margin-right: 10px;
-        }
-    }
-    a:hover {
-        color: $theme-red;
-    }
+.ads-container {
+    display: flex;
+    justify-content: space-between;
     img {
-        float: left;
-        width: 90px;
-        height: 50px;
-    }
-    div {
-        float: right;
-        width: 154px;
-        h5 {
-            height: 20px;
-            overflow: hidden;
-        }
-        p {
-            color: $theme-grey2;
-        }
-        i {
-            float: left;
-            color: $theme-grey2;
-            font-size: 12px;
-        }
-        b {
-            float: right;
-            color: $theme-grey2;
-            font-size: 12px;
-        }
+        width: 480px;
+        height: 84px;
     }
 }
 
-.img-recommend {
-    position: relative;
-    span {
-        position: absolute;
-        width: 36px;
-        height: 18px;
-        line-height: 18px;
-        text-align: center;
-        top: 72px;
-        left: 0;
-        color: #fff;
-        background-color: $theme-red;
-    }
-}
-
-.img-li {
-    position: relative;
-    span {
-        position: absolute;
-        width: 16px;
-        height: 16px;
-        line-height: 16px;
-        text-align: center;
-        top: 0;
-        left: 0;
-        color: #fff;
-        background-color: $theme-red;
-    }
-}
-
-.view-more {
-    position: absolute;
-    bottom: 0;
-    display: inline-block;
-    height: 28px;
-    width: 260px;
-    line-height: 28px;
-    text-align: center;
-    border-radius: 4px;
-    background-color: rgb(228, 228, 228);
-}
-
-.view-more:hover {
-    background-color: rgb(191, 190, 188);
+footer {
+    margin-top: 40px;
+    background-color: rgb(236, 236, 236)
 }
