--- a/acfun.scss
+++ b/acfun.scss
@@ -825,6 +825,68 @@ header {
 }
 
 footer {
-    margin-top: 40px;
-    background-color: rgb(236, 236, 236)
+    background-color: rgb(236, 236, 236);
+    .footer-top {
+        position: relative;
+        padding-top: 36px;
+        ul {
+            float: left;
+        }
+        li {
+            float: left;
+            width: 160px;
+            margin-left: 20px;
+            box-sizing: border-box;
+            border-right: 1px solid #fff;
+            h5 {
+                color: rgb(181, 181, 181);
+            }
+            p {
+                a {
+                    float: left;
+                    margin-top: 8px;
+                    margin-right: 25px;
+                }
+            }
+        }
+        li:first-of-type {
+            margin-left: 0;
+        }
+        .ac-girl {
+            position: absolute;
+            right: 0;
+            top: 50%;
+            transform: translateY(-50%);
+            background-color: #fff;
+            padding: 10px;
+            img {
+                width: 70px;
+                height: 60px;
+            }
+        }
+        .download {
+            width: 106px;
+        }
+        .feedback {
+            width: 196px;
+        }
+    }
+    .footer-main {
+        p {
+            float: left;
+            width: 214px;
+            margin-bottom: 10px;
+            color: rgb(204, 204, 204);
+        }
+    }
+    .footer-bottom {
+        img {
+            margin-bottom: 16px;
+        }
+        p {
+            padding-bottom: 16px;
+            color: rgb(204, 204, 204);
+        }
+        text-align: center;
+    }
 }
