--- a/acfun.css
+++ b/acfun.css
@@ -234,6 +234,12 @@ button {
 .view-more:hover {
   background-color: #bfbebc; }
 
+.nav-fixed {
+  position: fixed;
+  top: 45px;
+  z-index: 50;
+  width: 100%; }
+
 header .wrap {
   position: fixed;
   width: 100%;
@@ -319,6 +325,7 @@ header .header-banner {
 header nav {
   position: relative;
   height: 46px;
+  background-color: #fff;
   border-bottom: 1px solid #eee; }
   header nav ul {
     position: relative;
